# sample-extreme-text-classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
datasets/: document_classification_attributes.json  document_classification_dataset.json
examples/: attribute_generation_example.py
examples/advanced/: README.md  complete_example.py
examples/getting_started/: 1_basic_classification.py  2_classification_with_reranking.py  3_pdf_document_classification.py  4a_simple_attribute_validation.py  4b_comprehensive_attribute_validation.py  4c_attribute_generation_example.py  4d_use_generated_attributes.py  5a_generate_medical_dataset.py  5b_classify_medical_supplies.py  5c_classify_with_existing_embeddings.py  README.md
multi_class_text_classifier/: .env.example  CONFIG_README.md  PROMPTS_MIGRATION.md  __init__.py  attribute_evaluator.py  attribute_generator.py  attribute_validator.py  config.py  dataset_generator.py  dataset_loader.py  exceptions.py  llm_reranker.py  pdf_extractor.py  prompts.py  similarity_search.py  text_classifier.py
multi_class_text_classifier/models/: __init__.py  data_models.py
multi_class_text_classifier/services/: __init__.py  interfaces.py
tests/: __init__.py  test_classification_result.py  test_dataset_generator.py  test_dataset_loader.py  test_llm_reranker.py  test_pdf_extractor.py  test_project_structure.py  test_similarity_search.py  test_text_classifier.py
ui/: README.md
ui/backend/: .env.example  backend_api.py
ui/backend/config/: __init__.py  system_config.py
ui/backend/services/: __init__.py
(+3 files in other folders)
